--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,14 @@
 
 body {
   font-family: 'Alata', sans-serif;
-  background: -webkit-linear-gradient(rgba(202, 163, 175, 0.8), rgba(103, 109, 165, 0.8)), url("https://tinyurl.com/yx97raz9");
+  background: -webkit-linear-gradient(rgba(138, 130, 133, 0.8), rgba(59, 69, 155, 0.8)), url("https://tinyurl.com/yx97raz9");
   background-attachment: fixed;
   background-size: cover; 
-
+  background-position: center;
+  
 }
+
+
 
 .button:hover {
   cursor: pointer;
